--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
     </nav>
 
-    <div id="content">
+    <div id="content" class="content-wrapper">
 
         <header>
             <h2 class="center">
