Active class relocation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <nav id="sticker">
         <ul id="top-menu" class="navMenu topMenu blockMenu">
-            <li class="center"><a class="active" href="#pageOne">I</a>
+            <li class="center active"><a href="#pageOne">I</a>
             </li>
             <li class="center"><a href="#pageTwo">II</a>
             </li>
