--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Letter from a Birmingham Jail, Martin Luther King, Jr., 1963</title>
 
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
